--- a/app/src/main/res/layout/card_view_news_item.xml
+++ b/app/src/main/res/layout/card_view_news_item.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="8dp"
     android:id="@+id/news_card"
     android:foreground="?attr/selectableItemBackground"
@@ -15,13 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="4dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
+            android:orientation="horizontal"
             android:layout_margin="8dp"
             android:layout_height="match_parent">
-
             <ImageView
                 android:id="@+id/info_icon_iv"
                 android:layout_width="94dp"
@@ -31,8 +32,10 @@
                 android:src="@mipmap/yygc_default_icon" />
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_marginTop = "10dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@id/info_icon_iv">
@@ -69,7 +72,19 @@
                     android:layout_toRightOf="@+id/info_read_tv"
                     android:textSize="12sp" />
             </RelativeLayout>
-        </RelativeLayout>
+
+            <com.zxxk.demo.nutrition.ui.widget.StarView
+                android:id="@+id/collect_star_view"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="10dp"
+                android:src="@mipmap/ic_star"
+                tools:background="@color/accent"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
