--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="style_color_accent">#FF4081</color>
     <color name="navigation_item_selected">#12000000</color>
     <color name="white">#ffffff</color>
+    <color name="accent">#FFC107</color>
+    <color name="star_deactivated">#D6D6D6</color>
 </resources>
